@@ -1874,6 +1874,8 @@ HPDF_SetViewerPreference  (HPDF_Doc     pdf,
     if (ret != HPDF_OK)
         return HPDF_CheckError (&pdf->error);
 
+    pdf->pdf_version = HPDF_VER_16;
+
     return HPDF_OK;
 }
 
